--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <section class="header">
-
+        <div class="container">
+            <header class="d-flex justify-content-center py-3">
+              <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Portfolio</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Frameworks</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+              </ul>
+            </header>
+          </div>
     </section>
 
     <section class="hero">
