Added Badges Section Technical languages that I am proficient in

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,7 +35,15 @@
     </section>
 
     <section class="badges">
-
+        <div class="d-flex gap-2 justify-content-center py-5">
+            <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill">HTML</span>
+            <span class="badge bg-secondary-subtle text-secondary-emphasis rounded-pill">CSS</span>
+            <span class="badge bg-success-subtle text-success-emphasis rounded-pill">Python</span>
+            <span class="badge bg-danger-subtle text-danger-emphasis rounded-pill">React</span>
+            <span class="badge bg-warning-subtle text-warning-emphasis rounded-pill">JavaScript</span>
+            <span class="badge bg-info-subtle text-info-emphasis rounded-pill">MIPS</span>
+            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill">VHDL</span>
+          </div>
     </section>
 
     <section class="features">
