--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="container">
             <header class="d-flex justify-content-center py-3">
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Portfolio</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Frameworks</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" aria-current="page">DevKit</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active">Portfolio</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
               </ul>
             </header>
