Styled header and hero sections added background image and color adjusted margins on top & bottom of hero section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Manuel Mokua</title>
 </head>
 <body>
+  <!-- Header -->
     <section class="header">
         <div class="container">
             <header class="d-flex justify-content-center py-3">
@@ -20,16 +21,19 @@
           </div>
     </section>
 
+    <!-- Hero -->
     <section class="hero">
         <div class="px-4 py-5 my-5 text-center">
-            <img class="d-block mx-auto mb-4" src="./assets/emmanuelmokua.jpeg" alt="picture of emmanuel mokua" width="" height="150">
-            
+            <div class="developer-image">
+            <img class="d-block mx-auto mb-4" src="./assets/emmanuelmokua.jpeg" alt="picture of emmanuel mokua" width="" height="180" style="border-radius: 20%">
+            </div>
             <div class="col-lg-6 mx-auto">
               <p class="lead mb-4">Hi, I'm Manuel, a full-stack developer. Check out some of my projects. Have fun!!!</p>
             </div>
           </div>
     </section>
 
+    <!-- Badges -->
     <section class="badges">
         <div class="d-flex gap-2 justify-content-center py-5">
             <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill">HTML</span>
@@ -42,6 +46,7 @@
           </div>
     </section>
 
+    <!-- Portfolio -->
     <section class="features">
         <div class="container">
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
@@ -111,6 +116,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <section class="footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
