Styled Badges Section Added a "larger-barge" class to add custom styling to span elements Added a title for the badges section - "TechStack"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <header class="d-flex justify-content-center py-3">
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link" aria-current="page">DevKit</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Stack</a></li>
                 <li class="nav-item"><a href="#" class="nav-link active">Portfolio</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
               </ul>
@@ -35,14 +35,15 @@
 
     <!-- Badges -->
     <section class="badges">
+      <p class="skill-heading">TechStack</p>
         <div class="d-flex gap-2 justify-content-center py-5">
-            <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill">HTML</span>
-            <span class="badge bg-secondary-subtle text-secondary-emphasis rounded-pill">CSS</span>
-            <span class="badge bg-success-subtle text-success-emphasis rounded-pill">Python</span>
-            <span class="badge bg-danger-subtle text-danger-emphasis rounded-pill">React</span>
-            <span class="badge bg-warning-subtle text-warning-emphasis rounded-pill">JavaScript</span>
-            <span class="badge bg-info-subtle text-info-emphasis rounded-pill">MIPS</span>
-            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill">VHDL</span>
+            <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill larger-badge">HTML</span>
+            <span class="badge bg-secondary-subtle text-secondary-emphasis rounded-pill larger-badge">CSS</span>
+            <span class="badge bg-success-subtle text-success-emphasis rounded-pill larger-badge">Python</span>
+            <span class="badge bg-danger-subtle text-danger-emphasis rounded-pill larger-badge">React</span>
+            <span class="badge bg-warning-subtle text-warning-emphasis rounded-pill larger-badge">JavaScript</span>
+            <span class="badge bg-info-subtle text-info-emphasis rounded-pill larger-badge">MIPS</span>
+            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill larger-badge">VHDL</span>
           </div>
     </section>
 
